2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	remove spaces. 
	* src/uvariable.hh: done.

2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	Since the major event mechanism rewriting in r265, test lazzy
	evaluation had been broken on purpose, because we wanted the following
	code to ping twice:

        (1):

	at (a || b) ping;
	emit a & emit b;

	So we had to eval the right side of || even if the left side was
	already true (same thing with &&).
	This led to a series of serious problems where programmers commonly
	took for granted that things like that should work:

	if (!isdef(x) || x...) // trigger a runtime error on x when unknown!

	It also impacted the autogenerated code of 'new', which made the
	command fail in some cases. 
	
	So I have reestablished the lazzy test evaluation for the moment.
	There is a serious question on how to mix events and expressions eval in
	tests and this will be tackled later. Bearclaw suggests that the
	simple | bitwise operator could be used to have the same effect as ||
	but without lazzy evaluation, giving a convenient way to programmers
	to enforce the behavior of (1).

	Note: | for tests will obviously conflict with | for commands, I see no
	workaround.

	rehabilitate test lazzy evaluation. 
	* src/uexpression.cc: add test lazzy evaluation.

2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	update NEWS file. 
	* NEWS: add UOwned and function redefinition.

2007-01-23  Matthieu Nottale  <nottale@gostai.com>

	Do not put big buffers on the stack for aibo
	* src/ucommand.cc: Use a global buffer instead of on the stack ones for aibo.

2007-01-23  Jean-Christophe Baillie  <baillie@gostai.com>

	This FIXME was relative to an old comment that made no sense, because
	it was copy-pasted from somewhere else a long time ago. Just ignore
	the whole thing.

	remove unecessary comments. 
	* src/uvariable.cc: done.

2007-01-23  Jean-Christophe Baillie  <baillie@gostai.com>

	fix bug on 'random', ticket #100. 