@@ -432,6 +432,7 @@ UExpression::eval (UCommand *command,
     if (!e1 || e1->dataType != Type1)		\
     {						\
       delete e1;				\
+      send_error(connection, command, this, "Invalid type"); \
       return 0;					\
     }						\
   } while (0)
@@ -443,6 +444,7 @@ UExpression::eval (UCommand *command,
     {						\
       delete e1;				\
       delete e2;				\
+      send_error(connection, command, this, "Invalid type"); \
       return 0;					\
     }						\
   } while (0)
@@ -456,6 +458,7 @@ UExpression::eval (UCommand *command,
       delete e1;				\
       delete e2;				\
       delete e3;				\
+      send_error(connection, command, this, "Invalid type"); \
       return 0;					\
     }						\
   } while (0)
@@ -614,8 +617,12 @@ UExpression::eval (UCommand *command,
       if (e1==0 || e1->dataType == DATA_VOID ||
 	  e2==0 || e2->dataType == DATA_VOID)
       {
+        if (e1 && e1->dataType == DATA_VOID
+            || e2 && e2->dataType == DATA_VOID)
+          send_error(connection, command, this, "Invalid type");
 	delete e1;
 	delete e2;
+
 	return 0;
       }
       UValue* ret = e1->add(e2);
